# claude-agent-sdk-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  METADATA.md  README.md  claude_message_metadata.md  duties.py  env-vars.txt  pyproject.toml
.github/workflows/: create-release-tag.yml  publish.yml  test.yml
.zed/: settings.json
docs/: background-task-stream-behavior.md
e2e-tests/: conftest.py  test_agents_and_settings.py  test_dynamic_control.py  test_hook_events.py  test_hooks.py  test_include_partial_messages.py  test_mcp_image.py  test_sdk_mcp_tools.py  test_slash_commands.py  test_stderr_callback.py  test_structured_output.py  test_tool_permissions.py
examples/: agents.py  filesystem_agents.py  hooks.py  include_partial_messages.py  max_budget_usd.py  mcp_calculator.py  plugin_example.py  quick_start.py  setting_sources.py  stderr_callback_example.py  streaming_mode.py  streaming_mode_ipython.py  streaming_mode_trio.py  system_prompt.py  tool_permission_callback.py  tools_option.py
reference/: README.md  VERSION.json  sdk-tools.d.ts  sdk.d.ts  settings_file.py
scripts/: benchmark_parsing.py  build_wheel.py  capture_messages.py  download_cli.py  generate_settings_models.py  update_cli_version.py  update_sdk_reference.py  update_version.py
src/claude_agent_sdk/: client.py  types.py
src/claude_agent_sdk/_internal/: query.py
src/claude_agent_sdk/_internal/transport/: subprocess_cli.py
src/clawd_code_sdk/: __init__.py  _cli_version.py  _errors.py  _version.py  anthropic_stream.py  anthropic_types.py  client.py  input_types.py  instrumentation.py  list_sessions.py  mcp_utils.py  models.py  query.py  session.py  types.py  usage.py
src/clawd_code_sdk/_internal/: client.py  hooks.py  message_parser.py  query.py  session_mutations.py  sessions.py
src/clawd_code_sdk/_internal/transport/: __init__.py  subprocess_cli.py  subprocess_utils.py
src/clawd_code_sdk/models/: __init__.py  agents.py  anthropic_types.py  base.py  content_blocks.py  context_usage.py  control.py  hooks.py  input_types.py  mcp.py  messages.py  options.py  output_types.py  permissions.py  prompt_requests.py  prompts.py  sandbox.py  server_info.py  session.py  settings.py  settings_file.py  system_messages.py  thinking.py  tool_use_results.py  ts_output_types.py  usage.py
src/clawd_code_sdk/storage/: ARCHITECTURE.md  __init__.py  helpers.py  models.py  replay.py
tests/: conftest.py  mcp_server.py  mock_claude_server.py  test_changelog.py  test_client.py  test_errors.py  test_integration.py  test_message_parser.py  test_sdk_mcp_integration.py  test_session.py  test_session_mutations.py  test_sessions.py  test_streaming_client.py  test_subprocess_buffering.py  test_tool_callbacks.py  test_transport.py  test_types.py
tests/e2e/: test_agents_and_settings.py  test_dynamic_control.py  test_hook_events.py  test_hooks.py  test_include_partial_messages.py  test_mcp_image.py  test_mcp_resources.py  test_mcp_tools.py  test_sdk_mcp_resources.py  test_sdk_mcp_tools.py  test_slash_commands.py  test_stderr_callback.py  test_storage_parsing.py  test_structured_output.py  test_subagent_invocation.py  test_tool_permissions.py
