[project]
name = "clawd-code-sdk"
version = "0.1.82"
description = "Python SDK for Claude Code"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "phil65", email = "philipptemminghoff@gmail.com" },
]
keywords = ["ai", "anthropic", "claude", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "anthropic>=0.77.0",
  "anyenv>=2.0.15",
  "anyio>=4.0.0",
  "mcp>=0.1.0",
]

[project.urls]
Documentation = "https://github.com/phil65/claude-agent-sdk-python"
Homepage = "https://github.com/phil65/claude-agent-sdk-python"
Issues = "https://github.com/phil65/claude-agent-sdk-python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.20.0",
  "anyio[trio]>=4.0.0",
  "pytest-cov>=4.0.0",
  "pytest-timeout>=2.4.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawd_code_sdk"]
only-include = ["src/clawd_code_sdk"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["examples/"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest]
addopts = ["-m", "not slow and not acp_snapshot"]
filterwarnings = ["ignore::DeprecationWarning:pydantic.*:"]
log_cli = true
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_level = "ERROR"
markers = [
  "integration: marks tests as integration tests",
  "slow: marks tests as slow",
  "unit: marks tests as unit tests",
]
minversion = "9.0"
python_files = ["test_*.py"]
pythonpath = ["src"]
testpaths = ["tests"]
timeout = "180"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["examples/"]

[tool.ruff.lint]
future-annotations = true
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "PTH",  # flake8-use-pathlib
  "SIM",  # flake8-simplify
  "TC",
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "sqlalchemy.orm.DeclarativeBase",
  "schemez.Schema",
  "acp.base.Schema",
  "sqlmodel.SQLModel",
]
runtime-evaluated-decorators = [
  "pydantic.validate_call",
  "fastapi.FastAPI.get",
  "fastapi.FastAPI.post",
  "fastapi.APIRouter.get",
  "fastapi.APIRouter.post",
  "fastapi.APIRouter.put",
  "fastapi.APIRouter.delete",
  "fastapi.APIRouter.patch",
  "fastmcp.FastMCP.tool",
  "typer.Typer.command",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
# lines-between-types = 1
# atomic = true
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "I001"]
"scripts/*" = ["INP001"]
"*tests/*" = ["D100", "PLR2004"]
"docs/examples/**/*.py" = [
  "TC001",
]  # Examples don't need TYPE_CHECKING imports

[tool.ty.environment]
python-version = "3.13"
python-platform = "all"

[tool.ty.rules]
unresolved-import = "ignore"
unused-type-ignore-comment = "ignore"
invalid-type-form = "ignore"
not-subscriptable = "ignore"
possibly-missing-import = "warn"
division-by-zero = "warn"

[dependency-groups]
dev = [
    "fastmcp>=3.0.0",
]
