[project]
name = "clawd-code-sdk"
version = "1.0.12"
description = "Python SDK for Claude Code"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "phil65", email = "philipptemminghoff@gmail.com" },
]
keywords = ["ai", "anthropic", "claude", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "anthropic>=0.77.0",
  "anyenv>=2.0.15",
  "anyio>=4.0.0",
  "mcp>=0.1.0",
  "python-dotenv>=1.2.1",
]

[project.urls]
Documentation = "https://github.com/phil65/claude-agent-sdk-python"
Homepage = "https://github.com/phil65/claude-agent-sdk-python"
Issues = "https://github.com/phil65/claude-agent-sdk-python/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.20.0",
  "anyio[trio]>=4.0.0",
  "pytest-cov>=4.0.0",
  "pytest-timeout>=2.4.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
]

[dependency-groups]
dev = [
  "fastmcp>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clawd_code_sdk"]
only-include = ["src/clawd_code_sdk"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["examples/"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest]
addopts = ["-m", "not slow and not acp_snapshot and not e2e"]
filterwarnings = ["ignore::DeprecationWarning:pydantic.*:"]
log_cli = true
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_level = "ERROR"
markers = [
  "e2e: marks tests as e2e tests requiring API key",
  "integration: marks tests as integration tests",
  "slow: marks tests as slow",
  "unit: marks tests as unit tests",
]
minversion = "9.0"
python_files = ["test_*.py"]
pythonpath = ["src"]
testpaths = ["tests"]
timeout = "180"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["examples/"]

[tool.ruff.lint]
future-annotations = true
select = [
  "A",  # Flake8-builtins
  # "ANN",  # Flake8-Annotations
  # "ASYNC",  # Flake8-Async
  # "ARG",  # # Flake8-Unused-Arguments
  "B",  # flake8-bugbear
  "BLE",  # Flake8-blind-except
  "C",
  "C4",  # flake8-comprehensions
  # "C90",  # MCCabe
  "COM",  # Flake8-commas
  # "CPY",  #  Copyright-related rules
  "D",  # PyDocStyle
  # "DTZ",  # Flake8- Datetimez
  "E",  # PyCodeStyle Error
  "EM",  # flake8-errmsg
  # "ERA",  #  Eradicate
  "EXE",  # flake8-executable
  "F",  # PyFlakes
  "FA",  # flake8-future-annotations
  # "FBT",  # flake8-boolean-trap
  # "FIX",  # flake8-fixme
  "FLY",  # flynt
  "G",  # flake8-logging-format
  "I",  # ISort
  "ICN",  # Flake8-import-conventions
  "INP",  # flake8-no-pep420
  "INT",  # flake8-gettext
  "ISC",  # flake8-implicit-str-concat
  "N",  # pep8-naming
  # "NPY",  # numpy-specific rules
  # "PD",   # pandas-vet
  "PERF",  # perflint
  # "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PLE",  # PyLint Error
  "PLC",  # PyLint convention
  "PLW",  # PyLint Warning
  "PLR",  # PyLint refactor
  "PT",  # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "PYI",  # flake8-pyi
  "Q",  # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff-specific rules
  # "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self
  "SLOT",  # flake8-slots
  # "T",
  # "TD",   # flake8-todos
  "T10",  # flake8-debugger
  # "T20",  # flake8-print
  "TC",  # flake8-type-checking
  "TID",  # flake8-tidy-imports
  "TRY",  # tryceratops
  "UP",  # PyUpgrade
  "W",  # PyCodeStyle warning
  "YTT",  # flake8-2020
]
ignore = [
  "BLE001",
  "C408",  # Unnecessary {obj_type} call (rewrite as a literal)
  "C901",  # {name} is too complex ({complexity} > {max_complexity})
  "COM812",
  # "CPY001", # Missing copyright notice at top of file
  "D100",  # Missing docstring in public module
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in __init__
  "D203",  # 1 blank line required before class docstring
  "D204",  # 1 blank line required after class docstring
  "D213",  # Multi-line docstring summary should start at the second line
  "D401",  # First line of docstring should be in imperative mood: "{first_line}"
  "D408",  # Section underline should be in the line following the section's name ("{name}")
  "D413",  # Missing blank line after last section ("{name}")
  "EM101",  # Exception must not use a string literal, assign to variable first
  "EM102",  # Exception must not use an f-string literal, assign to variable first
  "ISC001",
  "PLC0415",
  "PLR0912",  # Too many branches
  "PLR0913",  # Too many arguments to function call
  "PLR0911",  # Comlexity
  "PLR0915",  # Too many statements
  # "PLR2004", # Magic values instead of named consts
  "SLF001",  # Private member accessed
  "TRY003",  # Avoid specifying long messages outside the exception class
  "TC006",  # runtime-cast-value
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "clawd_code_sdk.models.base.ClaudeCodeBaseModel",
  "sqlalchemy.orm.DeclarativeBase",
  "schemez.Schema",
  "acp.base.Schema",
  "sqlmodel.SQLModel",
]
runtime-evaluated-decorators = [
  "pydantic.validate_call",
  "fastapi.FastAPI.get",
  "fastapi.FastAPI.post",
  "fastapi.APIRouter.get",
  "fastapi.APIRouter.post",
  "fastapi.APIRouter.put",
  "fastapi.APIRouter.delete",
  "fastapi.APIRouter.patch",
  "fastmcp.FastMCP.tool",
  "typer.Typer.command",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
# lines-between-types = 1
# atomic = true
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "I001"]
"scripts/*" = ["INP001", "PLR2004"]
"*tests/*" = ["D100", "PLR2004"]
"src/clawd_code_sdk/models/settings.py" = ["ALL"]
"docs/examples/**/*.py" = [
  "TC001",
]  # Examples don't need TYPE_CHECKING imports

[tool.ty.environment]
python-version = "3.13"
python-platform = "all"

[tool.ty.rules]
unresolved-import = "ignore"
unused-type-ignore-comment = "ignore"
invalid-type-form = "ignore"
not-subscriptable = "ignore"
possibly-missing-import = "warn"
division-by-zero = "warn"
